Fixed accept edit accept edit was closing wrong task when multipl open. Also added wordbreak to label so long tasks will wrap

--- a/CSS/listTasks.css
+++ b/CSS/listTasks.css
@@ -31,6 +31,7 @@
   padding: 10px;
   text-align: left;
   width: 150px;
+  word-wrap: break-word;
 }
 .task-item {
   padding-bottom: 20px;
